apps/portal/portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal
spec:
  selector:
    matchLabels:
      app: portal
  replicas: 1
  template:
    metadata:
      labels:
        app: portal
    spec:
      containers:
        - name: portal
          image: ghcr.io/ieee-tamu/portal:0.2.26
          ports:
            - containerPort: 4000
