apps/portal/portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal
spec:
  selector:
    app: portal
  type: ClusterIP
  ports:
    - name: http
      port: 4000
