apps/portal/portal-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portal
spec:
  routes:
    - match: Host(`portal.ieeetamu.org`)
      kind: Rule
      services:
        - name: portal
          port: 4000
